--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,47 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+body {
+    background-image: url("https://i.pinimg.com/originals/00/87/b4/0087b4f11244545759b4981338917ba5.jpg");
+    background-repeat: no-repeat;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.trafficTop{
+    height: 100px;
+    width: 25px;
+    background: black;
+}
 
-*/
+.trafficLight {
+    height: 350px;
+    width: 150px;
+    border-radius: 5%;
+    border: 1px solid black;
+    background: black;
+}
+
+.red, .green, .yellow{
+    margin-top: 10px;
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+    text-align: center;
+}
+.red {
+    color: red;
+    background-color: red;
+}
+
+.yellow{
+    color: yellow;
+    background-color: yellow;
+}
+
+.green {
+    color: green;
+    background-color: green;
+}
+
+.selected {
+    box-shadow:
+    0 0 35px 35px #fdffc2
+}
